# GenAIJourney

./: .gitignore
AgenticAI/: classes.ipynb  decorator.ipynb  exceptions.ipynb  generators.ipynb  order.txt  pyproject.toml  threading.ipynb
BasicProject/: requirements.txt
BasicProject/NLTK/: Lemmatization.ipynb  Named-Entity-Recognition.ipynb  Parts+of+Speech.ipynb  Text-Preprocessing.ipynb  stemming.ipynb  tokenization.ipynb
BasicProject/Streamlit/: app.py  classification.py  widgets.py
BasicProject/Text2Vectors/: Bag-of-words.ipynb  TF-IDF.ipynb  Word2Vec.ipynb
DeepLearning/: ANN.ipynb  churn_predictor_app.py  hyperparameterstuning.ipynb  model.h5  prediction.ipynb  requirements.txt  scaler.pkl
DeepLearning/LSTM_RNN/: predict_word_lstmrnn.ipynb
DeepLearning/RNN/: RNN.ipynb  embedding.ipynb  prediction.ipynb
LangChain/: FastApi.py  GettingStarted.ipynb  huggingFace.ipynb  models.py  requirements.txt
LangChain/AWS/: claude_setup.py
LangChain/Agents/: ChatSQL.py  app.py  sqlite.py  student.db  tools_agent.ipynb
LangChain/ChatBots/: ChatBotwithHistory.ipynb  GroqAIChatbot.py  MathProblemSolver.py  OllamaChatBot.py  PDFQuery_withAstraDB.ipynb  SummarizewithhuggingFace.py  conversationqa.ipynb
LangChain/CodeLlama/: app.py  modelfile
LangChain/DataEmbedding/: OllamaEmbedding.ipynb  huggingFaceEmbedding.ipynb  openEmbedding.ipynb
llamaIndex/: download_documents.py  llamaIndexBasics.py  llamaIndexIngestion.py  pyproject.toml  requirements.txt
llamaIndex/RAG/: Ingestion.py  chunking.py  lngestion.py  pipeline.py
streamlit_apps/: requirements.txt
(+27 files in other folders)
